WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225273
[Perf] Creation of many video elements slows over time
https://bugs.webkit.org/show_bug.cgi?id=225273
Summary
[Perf] Creation of many video elements slows over time
Jer Noble
Reported
2021-05-01 12:17:34 PDT
[Perf] Creation of many video elements slows over time
Attachments
Patch
(6.53 KB, patch)
2021-05-01 12:27 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(6.76 KB, patch)
2021-05-01 23:23 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-05-01 12:27:32 PDT
<
rdar://problem/77421036
>
Jer Noble
Comment 2
2021-05-01 12:27:45 PDT
Created
attachment 427510
[details]
Patch
Jer Noble
Comment 3
2021-05-01 23:23:45 PDT
Created
attachment 427520
[details]
Patch for landing
EWS
Comment 4
2021-05-02 09:04:35 PDT
Committed
r276883
(
237229@main
): <
https://commits.webkit.org/237229@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427520
[details]
.
Truitt Savell
Comment 5
2021-05-03 15:50:33 PDT
The changes in
https://trac.webkit.org/changeset/276883/webkit
has caused imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiocontext-interface/suspend-after-construct.html to crash constantly on debug. tracking in
https://bugs.webkit.org/show_bug.cgi?id=225332
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug