Source/WebCore/platform/audio/PlatformMediaSession.cpp
@@ -137,12 +137,25 @@ PlatformMediaSession::PlatformMediaSession(PlatformMediaSessionManager& manager,
     , m_logIdentifier(uniqueLogIdentifier())
 #endif
 {
-    manager.addSession(*this);
 }
 
 PlatformMediaSession::~PlatformMediaSession()
 {
-    if (m_manager)
+    setActive(false);
+}
+
+void PlatformMediaSession::setActive(bool active)
+{
+    if (m_active == active)
+        return;
+    m_active = active;
+
+    if (!m_manager)
+        return;
+
+    if (m_active)
+        m_manager->addSession(*this);
+    else
         m_manager->removeSession(*this);
 }
 
